# CppTerminalChat

./: CMakeLists.txt  README.md
src/: Message.cpp  Message.hpp
src/client/: CMakeLists.txt  Connection.cpp  Connection.hpp  client.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatServer.hpp  Connection.cpp  Connection.hpp  ConnectionsManager.hpp  server.cpp
